chore(*): amend layout and config

--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,6 @@
         <div class="spinner spinner-6">d</div>
     </div>
 </notadd-loading>
-<app-root></app-root>
+<notadd-root></notadd-root>
 </body>
 </html>
