feat(index): change primary color and document title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>NgNotadd</title>
+    <title>Notadd</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #3f51b5;
+            background-color: #3c4252;
             z-index: 99999;
             pointer-events: none;
         }
