--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,8 @@
             }
         }
     </style>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#1976d2">
 </head>
 <body>
 <notadd-loading id="notadd-loading">
@@ -167,5 +169,6 @@
     </div>
 </notadd-loading>
 <notadd-root></notadd-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
