feat(index): loading animation optimize

--- a/src/index.html
+++ b/src/index.html
@@ -39,112 +39,33 @@
             font-weight:normal;
             font-style:normal;
             text-shadow: rgba(255,255,255,0.98) 0 0 0;
-            animation-name:bounce_inTurnBlurringTextG;
-            -o-animation-name:bounce_inTurnBlurringTextG;
-            -ms-animation-name:bounce_inTurnBlurringTextG;
-            -webkit-animation-name:bounce_inTurnBlurringTextG;
-            -moz-animation-name:bounce_inTurnBlurringTextG;
+            animation-name:bounce_inTurnBlurringText;
             animation-duration:1.641s;
-            -o-animation-duration:1.641s;
-            -ms-animation-duration:1.641s;
-            -webkit-animation-duration:1.641s;
-            -moz-animation-duration:1.641s;
             animation-iteration-count:infinite;
-            -o-animation-iteration-count:infinite;
-            -ms-animation-iteration-count:infinite;
-            -webkit-animation-iteration-count:infinite;
-            -moz-animation-iteration-count:infinite;
             animation-direction:normal;
-            -o-animation-direction:normal;
-            -ms-animation-direction:normal;
-            -webkit-animation-direction:normal;
-            -moz-animation-direction:normal;
+            transform: translate3d(0, 0, 0);
         }
 
         .spinner-1{
             animation-delay:0.5825s;
-            -o-animation-delay:0.5825s;
-            -ms-animation-delay:0.5825s;
-            -webkit-animation-delay:0.5825s;
-            -moz-animation-delay:0.5825s;
         }
         .spinner-2{
             animation-delay:0.699s;
-            -o-animation-delay:0.699s;
-            -ms-animation-delay:0.699s;
-            -webkit-animation-delay:0.699s;
-            -moz-animation-delay:0.699s;
         }
         .spinner-3{
             animation-delay:0.8155s;
-            -o-animation-delay:0.8155s;
-            -ms-animation-delay:0.8155s;
-            -webkit-animation-delay:0.8155s;
-            -moz-animation-delay:0.8155s;
         }
         .spinner-4{
             animation-delay:0.932s;
-            -o-animation-delay:0.932s;
-            -ms-animation-delay:0.932s;
-            -webkit-animation-delay:0.932s;
-            -moz-animation-delay:0.932s;
         }
         .spinner-5{
             animation-delay:1.0485s;
-            -o-animation-delay:1.0485s;
-            -ms-animation-delay:1.0485s;
-            -webkit-animation-delay:1.0485s;
-            -moz-animation-delay:1.0485s;
         }
         .spinner-6{
             animation-delay:1.165s;
-            -o-animation-delay:1.165s;
-            -ms-animation-delay:1.165s;
-            -webkit-animation-delay:1.165s;
-            -moz-animation-delay:1.165s;
         }
 
-        @keyframes bounce_inTurnBlurringTextG{
-            0%{
-                text-shadow: rgb(255,255,255) 0 0 0;
-            }
-
-            100%{
-                text-shadow: rgb(255,255,255) 0 0 55px;
-            }
-        }
-
-        @-o-keyframes bounce_inTurnBlurringTextG{
-            0%{
-                text-shadow: rgb(255,255,255) 0 0 0;
-            }
-
-            100%{
-                text-shadow: rgb(255,255,255) 0 0 55px;
-            }
-        }
-
-        @-ms-keyframes bounce_inTurnBlurringTextG{
-            0%{
-                text-shadow: rgb(255,255,255) 0 0 0;
-            }
-
-            100%{
-                text-shadow: rgb(255,255,255) 0 0 55px;
-            }
-        }
-
-        @-webkit-keyframes bounce_inTurnBlurringTextG{
-            0%{
-                text-shadow: rgb(255,255,255) 0 0 0;
-            }
-
-            100%{
-                text-shadow: rgb(255,255,255) 0 0 55px;
-            }
-        }
-
-        @-moz-keyframes bounce_inTurnBlurringTextG{
+        @keyframes bounce_inTurnBlurringText{
             0%{
                 text-shadow: rgb(255,255,255) 0 0 0;
             }
